Adjusting parallax scrolling issue on Firefox

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,6 +1,56 @@
 /* ****** DESKTOP MEDIA QUERY ******* */
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media (min-width: 1440px) and (max-width: 1999px) {
+  section#contact div.contact-copy1 h2.contact-title1 {
+    font-size: 7rem;
+    padding-bottom: 1rem;
+  }
+
+    section#contact div.contact-copy1 h5.contact-text {
+      font-size: 4rem;
+      padding-top: 1rem;
+  }
+
+  section#contact article.contact-meat div.contact-copy1 {
+    width: 50%;
+    border: 1px solid red;
+  }
+
+  section#contact div.contact-btns3 {
+    border: 1px solid blue;
+    width: 100%;
+  }
+
+   div.contact-btns2 {
+    margin: 3rem auto 0 auto;
+    width: 100%;
+  }
+
+   div.contact-btns2 a.primary-btn {
+    width: 50rem;
+    height: 6.5rem;
+    padding: 2.5rem 0 0 0;
+    font-size: 2.4rem;
+  }
+
+  section#contact div.contact-btns3 {
+    margin: 3rem auto 0 auto;
+    width: 100%;
+  }
+
+  section#contact div.contact-btns3 a.primary-btn {
+    width: 50rem;
+    height: 6.5rem;
+    padding: 2.5rem 0 0 0;
+    font-size: 2.4rem;
+  }
+
+  section#contact div.contact-btns3 a.get-in-touch {
+    margin-right: 2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1999px) {
 
   div.container {
     width: 100%;
@@ -55,6 +105,7 @@
   }
 
   /* INTRO DESKTOP SECTION */
+
   div.contact-btns1 {
     display: flex;
     align-items: center;
@@ -64,8 +115,9 @@
     margin: 2rem auto 10rem auto;
   }
 
-  div.contact-btns1 a.desktop-prototype {
+  div.contact-btns1 a.primary-btn {
     margin-right: 1.5rem;
+    width: 30rem;
   }
 
   article.intro-header {
@@ -965,12 +1017,6 @@ div.bt-screen {
   margin: 0;
 }
 
-/* article.button-wrapper div.bt-screen img {
-  width: auto;
-  margin: 3rem auto 1rem auto;
-  border: 1px solid blue;
-} */
-
 article.button-wrapper div.bt-screen img {
   display: none;
 }
@@ -981,10 +1027,6 @@ article.button-wrapper p.bt-desc {
   line-height: 120%;
   color: #FFFDFB;
 }
-
-/* section.rogue-img img.rogue-desktop {
-  display: none;
-} */
 
 section.rogue-img .rogue-desktop {
   width: 100%;
@@ -1134,24 +1176,30 @@ article.final-p {
 }
 
 article.final-p .content {
-  margin-left: 17rem;
+  margin-left: 13%;
   width: 35%;
+  text-align: left;
 }
 
 article.final-p h2 {
   font-size: 3rem;
+  text-align: left;
   font-family: futura-bold, 'Brandon Text Bold', sans-serif;
 }
 
 article.final-p .text-box {
   font-size: 2rem;
   padding-top: 1.5rem;
+  padding-left:
+    text-align: left;
   font-family: 'Brandon Text Regular', sans-serif;
 }
 
 div.desktop-images-final {
   background-image: url("../images/project/background-swoop.png");
   position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
   top: -5rem;
 }
 
@@ -1200,17 +1248,18 @@ div.desktop-images-final div.mobile-desktop-images {
 }
 
 div.mobile-desktop-images img.final-mobile-one {
-  width: 80%;
-  margin-top: 30rem;
-  padding-bottom: 0rem;
+  width: 100%;
+  margin-top: 50rem;
+  margin-bottom: 3rem;
   z-index: 1699;
 }
 
  div.mobile-desktop-images img.final-mobile-two {
-   width: 80%;
+   width: 100%;
    margin: 0 auto;
    padding-bottom: 0.5rem;
    z-index: 1700;
+   margin-bottom: 3rem;
  }
 
  article.final-p div.mobile-images-final {
@@ -1278,9 +1327,8 @@ section#contact div.box1 {
 }
 
 div.box1 img.contact-graphic{
-  width: 23%;
-  margin-left: 64%;
-  padding-left: 3rem;
+  width: 20%;
+  margin-left: 67%;
   z-index: 1;
 }
 
@@ -1363,7 +1411,7 @@ ul.social-media {
 }
 
 #footer-box ul.social-media p{
-  font-family: "Brandon Text Regular";
+  font-family: "Brandon Text Medium";
   font-size: 1.7rem;
 }
 
@@ -1393,6 +1441,7 @@ div.copyright p {
   padding-left: 0;
   font-size: 1.8rem;
   font-family: "Brandon Text Medium";
+ }
 }
 
 @media only screen (min-width: 1100px) {
@@ -1406,6 +1455,4 @@ div.copyright p {
     font-size: 1.8rem;
     font-family: "Brandon Text Medium";
   }
-}
-
 }
